@@ -1,3 +1,9 @@
+
+Fri May 10 16:30:57 CEST 2002 Paolo Molaro <lupus@ximian.com>
+
+	* MethodBuilder.cs, ConstructorBuilder.cs: implemented InitLocals
+	property.
+
 2002-04-26  Martin Baulig  <martin@gnome.org>
 
 	* ModuleBuilder.cs (DefineDocument): Implemented.
